// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dist/index class Risen() integration internal database service works 1`] = `
"
            <html>
               <head>
                  <title>Database Verification</title>
               </head>
               <body>
                  <p>Fixed Number: 1024</p>
               </body>
            </html>
            "
`;

exports[`dist/index class Risen() integration service to service redirection works 1`] = `
"
        <html>
           <head>
              <title>Test Service Response</title>
           </head>
           <body>
              <p>Service to service communication verified!</p>
           </body>
        </html>
        "
`;
